# pgrouting

./: .gitignore  CMakeLists.txt  VERSION  configuration.conf
doc/betweenness/: doc-pgr_betweenness.queries  pgr_betweenness.rst
doc/funnyDijkstra/: doc-pgr_funnyDijkstra.queries  pgr_funnyDijkstra.rst
doc/performanceAnalysis/: doc-pgr_performanceAnalysis.queries  pgr_performanceAnalysis.rst
include/betweenness/: pgr_brandes_betweenness.hpp
include/c_common/: time_msg.h
include/c_types/: betweenness_rt.h  performance_analysis_t.h  pgr_connections_rt.h  pgr_time_analysis_t.h
include/components/: pgr_makeConnected.hpp
include/contraction/: pgr_contract.hpp  pgr_contractionGraph.hpp  pgr_deadEndContraction.hpp  pgr_linearContraction.hpp
include/cpp_common/: ch_edge.h  ch_vertex.h
pgtap/betweenness/: betweenness-compare-dijkstra.sql  betweenness-innerQuery.sql  betweenness-typesCheck.sql
pgtap/funnyDijkstra/: funnyDijkstra-compare-dijkstra.sql  funnyDijkstra-innerQuery.sql  funnyDijkstra-typesCheck.sql
pgtap/performanceAnalysis/: performanceAnalysis-compare-dijkstra.sql  performanceAnalysis-innerQuery.sql  performanceAnalysis-typesCheck.sql
sql/betweenness/: CMakeLists.txt  betweenness.sql
sql/components/: CMakeLists.txt  makeConnected.sql
sql/contraction/: CMakeLists.txt  areaContraction.sql
sql/funnyDijkstra/: CMakeLists.txt  funnyDijkstra.sql
sql/performanceAnalysis/: CMakeLists.txt  performanceAnalysis.sql
sql/timeAnalysis/: CMakeLists.txt  timeAnalysis.sql
src/components/: CMakeLists.txt  makeConnected.c  makeConnected_driver.cpp
(+52 files in other folders)
